--- a/environment.yml
+++ b/environment.yml
@@ -2,18 +2,22 @@ name: python_playground
 channels:
   - defaults
 dependencies:
+  - astroid=2.11.7=py39hecd8cb5_0
   - autopep8=1.6.0=pyhd3eb1b0_1
   - bzip2=1.0.8=h1de35cc_0
   - c-ares=1.18.1=hca72f7f_0
   - ca-certificates=2022.10.11=hecd8cb5_0
   - certifi=2022.9.24=py39hecd8cb5_0
   - curl=7.85.0=hca72f7f_0
+  - dill=0.3.6=py39hecd8cb5_0
   - expat=2.4.9=he9d5cce_0
   - gdbm=1.18=hdccc71a_4
   - gettext=0.21.0=h7535e17_0
   - git=2.34.1=pl5262h74264fa_0
   - icu=58.2=h0a44026_3
+  - isort=5.9.3=pyhd3eb1b0_0
   - krb5=1.19.2=hcd88c3b_0
+  - lazy-object-proxy=1.6.0=py39h9ed2024_0
   - libcurl=7.85.0=h6dfd666_0
   - libcxx=14.0.6=h9765a3e_0
   - libedit=3.1.20210910=hca72f7f_0
@@ -24,20 +28,28 @@ dependencies:
   - libssh2=1.10.0=h0a4fc7d_0
   - libxml2=2.9.14=hbf8cd5e_0
   - llvm-openmp=14.0.6=h0dcd299_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
   - ncurses=6.3=hca72f7f_3
   - openssl=1.1.1s=hca72f7f_0
   - pcre2=10.37=he7042d7_1
   - perl=5.34.0=h435f0c2_2
   - pip=22.2.2=py39hecd8cb5_0
+  - platformdirs=2.5.2=py39hecd8cb5_0
   - pycodestyle=2.8.0=pyhd3eb1b0_0
+  - pylint=2.14.5=py39hecd8cb5_0
   - python=3.9.15=hdfd78df_0
   - readline=8.2=hca72f7f_0
   - setuptools=65.5.0=py39hecd8cb5_0
   - sqlite=3.40.0=h880c91c_0
   - tk=8.6.12=h5d9f67b_0
   - toml=0.10.2=pyhd3eb1b0_0
+  - tomli=2.0.1=py39hecd8cb5_0
+  - tomlkit=0.11.1=py39hecd8cb5_0
+  - typing-extensions=4.3.0=py39hecd8cb5_0
+  - typing_extensions=4.3.0=py39hecd8cb5_0
   - tzdata=2022f=h04d1e81_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - wrapt=1.14.1=py39hca72f7f_0
   - xz=5.2.6=hca72f7f_0
   - zlib=1.2.13=h4dc903c_0
 prefix: /Users/janvoges/opt/anaconda3/envs/python_playground
