--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: python_playground
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - astroid=2.11.7
@@ -7,16 +8,21 @@ dependencies:
   - black=22.6.0
   - bzip2=1.0.8
   - c-ares=1.18.1
-  - ca-certificates=2022.10.11
+  - ca-certificates=2022.9.24
   - certifi=2022.9.24
+  - cffi=1.15.1
+  - cfgv=3.3.1
   - click=8.0.4
   - curl=7.85.0
   - dill=0.3.6
+  - distlib=0.3.6
   - expat=2.4.9
+  - filelock=3.8.0
   - gdbm=1.18
   - gettext=0.21.0
   - git=2.34.1
   - icu=58.2
+  - identify=2.5.9
   - isort=5.9.3
   - krb5=1.19.2
   - lazy-object-proxy=1.6.0
@@ -33,16 +39,21 @@ dependencies:
   - mccabe=0.7.0
   - mypy_extensions=0.4.3
   - ncurses=6.3
+  - nodeenv=1.7.0
   - openssl=1.1.1s
   - pathspec=0.9.0
   - pcre2=10.37
   - perl=5.34.0
   - pip=22.2.2
   - platformdirs=2.5.2
+  - pre-commit=2.20.0
   - pycodestyle=2.8.0
+  - pycparser=2.21
   - pydocstyle=6.1.1
   - pylint=2.14.5
   - python=3.9.15
+  - python_abi=3.9
+  - pyyaml=6.0
   - readline=8.2
   - setuptools=65.5.0
   - shellcheck=0.7.2
@@ -55,7 +66,10 @@ dependencies:
   - typing-extensions=4.3.0
   - typing_extensions=4.3.0
   - tzdata=2022f
+  - ukkonen=1.0.1
+  - virtualenv=20.17.0
   - wheel=0.37.1
   - wrapt=1.14.1
   - xz=5.2.6
+  - yaml=0.2.5
   - zlib=1.2.13
