--- a/environment.yml
+++ b/environment.yml
@@ -6,44 +6,81 @@ dependencies:
   - astroid=2.11.7
   - autopep8=1.6.0
   - black=22.6.0
+  - blas=1.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - bzip2=1.0.8
   - c-ares=1.18.1
-  - ca-certificates=2022.9.24
-  - certifi=2022.9.24
+  - ca-certificates=2022.10.11
+  - certifi=2022.12.7
   - cffi=1.15.1
   - cfgv=3.3.1
   - click=8.0.4
+  - colorama=0.4.6
+  - contourpy=1.0.5
   - curl=7.85.0
+  - cycler=0.11.0
   - dill=0.3.6
   - distlib=0.3.6
   - expat=2.4.9
   - filelock=3.8.0
+  - fonttools=4.25.0
+  - freetype=2.12.1
   - gdbm=1.18
   - gettext=0.21.0
+  - giflib=5.2.1
   - git=2.34.1
+  - gmp=6.2.1
   - icu=58.2
   - identify=2.5.9
+  - intel-openmp=2021.4.0
   - isort=5.9.3
+  - jpeg=9e
+  - kiwisolver=1.4.4
   - krb5=1.19.2
   - lazy-object-proxy=1.6.0
+  - lcms2=2.12
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
   - libcurl=7.85.0
   - libcxx=14.0.6
+  - libdeflate=1.8
   - libedit=3.1.20210910
   - libev=4.33
   - libffi=3.3
   - libiconv=1.16
   - libnghttp2=1.46.0
+  - libpng=1.6.37
+  - libsqlite=3.40.0
   - libssh2=1.10.0
+  - libtiff=4.4.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
   - libxml2=2.9.14
+  - libzlib=1.2.13
   - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - matplotlib=3.6.2
+  - matplotlib-base=3.6.2
   - mccabe=0.7.0
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - munkres=1.1.4
   - mypy_extensions=0.4.3
   - ncurses=6.3
   - nodeenv=1.7.0
+  - numpy=1.23.5
+  - numpy-base=1.23.5
   - openssl=1.1.1s
+  - packaging=22.0
   - pathspec=0.9.0
   - pcre2=10.37
   - perl=5.34.0
+  - pillow=9.3.0
   - pip=22.2.2
   - platformdirs=2.5.2
   - pre-commit=2.20.0
@@ -51,18 +88,23 @@ dependencies:
   - pycparser=2.21
   - pydocstyle=6.1.1
   - pylint=2.14.5
+  - pyparsing=3.0.9
   - python=3.9.15
+  - python-dateutil=2.8.2
   - python_abi=3.9
   - pyyaml=6.0
   - readline=8.2
   - setuptools=65.5.0
   - shellcheck=0.7.2
+  - six=1.16.0
   - snowballstemmer=2.2.0
   - sqlite=3.40.0
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
   - tomlkit=0.11.1
+  - tornado=6.2
+  - typing=3.10.0.0
   - typing-extensions=4.3.0
   - typing_extensions=4.3.0
   - tzdata=2022f
@@ -73,3 +115,4 @@ dependencies:
   - xz=5.2.6
   - yaml=0.2.5
   - zlib=1.2.13
+  - zstd=1.5.2
