--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - autopep8=1.6.0
   - black=22.6.0
   - blas=1.0
+  - bottleneck=1.3.5
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - bzip2=1.0.8
@@ -23,6 +24,7 @@ dependencies:
   - dill=0.3.6
   - distlib=0.3.6
   - expat=2.4.9
+  - fftw=3.3.9
   - filelock=3.8.0
   - fonttools=4.25.0
   - freetype=2.12.1
@@ -35,6 +37,7 @@ dependencies:
   - identify=2.5.9
   - intel-openmp=2021.4.0
   - isort=5.9.3
+  - joblib=1.1.1
   - jpeg=9e
   - kiwisolver=1.4.4
   - krb5=1.19.2
@@ -50,6 +53,8 @@ dependencies:
   - libedit=3.1.20210910
   - libev=4.33
   - libffi=3.3
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
   - libiconv=1.16
   - libnghttp2=1.46.0
   - libpng=1.6.37
@@ -73,10 +78,12 @@ dependencies:
   - mypy_extensions=0.4.3
   - ncurses=6.3
   - nodeenv=1.7.0
+  - numexpr=2.8.4
   - numpy=1.23.5
   - numpy-base=1.23.5
   - openssl=1.1.1s
   - packaging=22.0
+  - pandas=1.5.2
   - pathspec=0.9.0
   - pcre2=10.37
   - perl=5.34.0
@@ -92,13 +99,17 @@ dependencies:
   - python=3.9.15
   - python-dateutil=2.8.2
   - python_abi=3.9
+  - pytz=2022.7
   - pyyaml=6.0
   - readline=8.2
+  - scikit-learn=1.1.3
+  - scipy=1.9.3
   - setuptools=65.5.0
   - shellcheck=0.7.2
   - six=1.16.0
   - snowballstemmer=2.2.0
   - sqlite=3.40.0
+  - threadpoolctl=2.2.0
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
